<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Model.Book">

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Description"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toTopOf="@+id/scan_add_book"
        app:layout_constraintStart_toStartOf="@+id/categoryText"
        app:layout_constraintTop_toBottomOf="@+id/categoryText" />

    <EditText
        android:id="@+id/descriptionAdd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@color/schemeLightGreen"
        android:ellipsize="start"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:hint="Description"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:scrollbars="horizontal|vertical"
        android:scrollHorizontally="true"
        android:shadowColor="@android:color/black"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textCursorDrawable="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/confirmSendRequest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/descriptionText"
        app:layout_constraintTop_toBottomOf="@+id/spinner_add_book" />

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Category -"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toStartOf="@+id/isbnText"
        app:layout_constraintTop_toBottomOf="@+id/isbnText" />

    <TextView
        android:id="@+id/isbnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="ISBN -"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toStartOf="@+id/authorText"
        app:layout_constraintTop_toBottomOf="@+id/authorText" />

    <TextView
        android:id="@+id/authorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Author -"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toStartOf="@+id/titleText"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <Button
        android:id="@+id/confirmSendRequest"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="false"
        android:background="@color/schemeLightGreen"
        android:cropToPadding="false"
        android:drawableTop="@drawable/manualadd_icon"
        android:drawableTint="@color/schemeDarkGreen"
        android:text="Submit"
        android:textAlignment="center"
        android:textColor="@color/schemeDarkGreen"
        android:textSize="18sp"
        android:textStyle="italic"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/scan_add_book"
        app:layout_constraintEnd_toStartOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scan_add_book" />

    <Button
        android:id="@+id/scan_add_book"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="64dp"
        android:adjustViewBounds="false"
        android:background="@color/schemeLightGreen"
        android:cropToPadding="false"
        android:drawableTop="@drawable/cameranew"
        android:drawableTint="@color/schemeDarkGreen"
        android:text="Scan To Add"
        android:textAlignment="center"
        android:textColor="@color/schemeDarkGreen"
        android:textSize="18sp"
        android:textStyle="italic"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirmSendRequest"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/frameLayout" />


    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Title -"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookImageUpdate" />

    <ImageButton
        android:id="@+id/bookImageUpdate"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[3]" />


    <EditText
        android:id="@+id/bookTitleAdd"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:background="@color/schemeLightGreen"
        android:ellipsize="start"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:hint="Title"
        android:inputType="textPersonName"
        android:shadowColor="@android:color/black"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textCursorDrawable="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/titleText"
        app:layout_constraintEnd_toEndOf="@+id/bookAuthorAdd"
        app:layout_constraintStart_toStartOf="@+id/bookISBNAdd" />

    <EditText
        android:id="@+id/bookAuthorAdd"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:background="@color/schemeLightGreen"
        android:ellipsize="start"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:hint="Author"
        android:inputType="textPersonName"
        android:shadowColor="@android:color/black"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textCursorDrawable="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/authorText"
        app:layout_constraintEnd_toEndOf="@+id/bookISBNAdd"
        app:layout_constraintStart_toStartOf="@+id/bookISBNAdd" />

    <EditText
        android:id="@+id/bookISBNAdd"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:background="@color/schemeLightGreen"
        android:ellipsize="start"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:hint="ISBN"
        android:inputType="textPersonName"
        android:shadowColor="@android:color/black"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textCursorDrawable="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/isbnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/descriptionAdd" />

    <Spinner
        android:id="@+id/spinner_add_book"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:background="@color/schemeLightGreen"
        android:dropDownWidth="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:shadowColor="@android:color/black"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textCursorDrawable="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/bookISBNAdd"
        app:layout_constraintStart_toStartOf="@+id/descriptionAdd"
        app:layout_constraintTop_toBottomOf="@+id/bookISBNAdd" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="0dp">

        <include layout="@layout/activity_navigation" />

    </FrameLayout>


</android.support.constraint.ConstraintLayout>