<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.SignUpActivity">

    <EditText

        android:id="@+id/userName_SignUp"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:background="@color/schemeMediumTurqoise"
        android:ellipsize="start"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/schemeDarkGreen"
        android:textColorHint="@color/schemeDarkGreen"
        android:textColorLink="@color/schemeDarkGreen"
        android:textCursorDrawable="@color/schemeDarkGreen"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_SignUp"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@color/schemeMediumTurqoise"
        android:ellipsize="start"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="Email"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/schemeDarkGreen"
        android:textColorHint="@color/schemeDarkGreen"
        android:textColorLink="@color/schemeDarkGreen"
        android:textCursorDrawable="@color/schemeDarkGreen"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/userName_SignUp"
        app:layout_constraintTop_toBottomOf="@+id/userName_SignUp" />

    <EditText
        android:id="@+id/password_SignUp"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@color/schemeMediumTurqoise"
        android:ellipsize="start"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="Password"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/schemeDarkGreen"
        android:textColorHint="@color/schemeDarkGreen"
        android:textColorLink="@color/schemeDarkGreen"
        android:textCursorDrawable="@color/schemeDarkGreen"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/email_SignUp"
        app:layout_constraintTop_toBottomOf="@+id/email_SignUp" />

    <EditText
        android:id="@+id/phone_SignUp"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@color/schemeMediumTurqoise"
        android:ellipsize="start"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="Phone (Optional)"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/schemeDarkGreen"
        android:textColorHint="@color/schemeDarkGreen"
        android:textColorLink="@color/schemeDarkGreen"
        android:textCursorDrawable="@color/schemeDarkGreen"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/password_SignUp"
        app:layout_constraintTop_toBottomOf="@+id/password_SignUp" />

    <TextView
        android:id="@+id/noAccountText"
        android:layout_width="112dp"
        android:layout_height="20dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="32dp"
        android:text="Have an account?"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="italic"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/signUp" />

    <Button
        android:id="@+id/signUp_SignIn"
        android:layout_width="48dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="76dp"
        android:background="@color/schemeLightGreen"
        android:fontFamily="sans-serif-medium"
        android:text="Log In"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/schemeDarkGreen"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/noAccountText"
        app:layout_constraintEnd_toEndOf="@+id/signUp"
        app:layout_constraintStart_toEndOf="@+id/noAccountText" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/schemeLightGreen"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textColor="@color/schemeDarkGreen"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_SignUp" />

    <ProgressBar
        android:id="@+id/progressBar_signUp"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/noAccountText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp" />

</android.support.constraint.ConstraintLayout>