...
        android:textStyle="italic"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/logInButton" />

    <Button
        android:id="@+id/SignUp_Main"
        android:layout_width="56dp"
        android:layout_height="20dp"
        android:layout_marginEnd="56dp"
        android:background="@color/schemeLightGreen"
        android:fontFamily="sans-serif-medium"
        android:text="Sign Up"
...
